[tool.poetry]
name = "archivalbot"
version = "0.1.0"
description = ""
authors = ["Eko Indarto <eko.indarto@dans.knaw.nl>"]
include = [ "logs/*", "resources/*"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
minio = "^7.1.12"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
dynaconf = "^3.1.11"
requests = "^2.28.1"
bagit = "^1.8.1"
sword2 = {git = "https://github.com/swordapp/python-client-sword2"}
sqlite-utils = "^3.30"
bibtexparser = "^1.4.0"
polling2 = "^0.5.0"
rdflib = "^6.3.2"
pyshacl = "^0.22.2"
jinja2 = "^3.1.2"
jsonpath-ng = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
